[tool.poetry]
name = "dummy-env"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8,<3.11"
gym = "0.25"
PettingZoo = "^1.19.0"
SuperSuit = "^3.5.0"
stable-baselines3 = {git = "https://github.com/carlosluis/stable-baselines3.git", rev = "fix_tests"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
